# youssefamen237

./: .env.example  .env.local.example  .gitignore  ADVANCED_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CHANNEL_CONSTITUTION.md  DEPLOYMENT.md  Dockerfile  EXTRACTION_MANIFEST.md  FIXED_EXPLANATION.md  FIX_INSTRUCTIONS.md  FIX_REPORT.py  FIX_SUMMARY.md  GITHUB_ACTIONS_FIX.md  IMPLEMENTATION.md  IMPORT_FIXES.md  LICENSE  MASTER_RUN.py  Makefile  NEXT_STEPS_AR.md  PROJECT_COMPLETE.md  PROJECT_MASTER_SPECIFICATION.txt  PROJECT_SPEC.md  PROJECT_SUMMARY.py  QUICK_FIX.md  QUICK_START.md  Qwen_markdown_README.md_20260215_6ndbjgn6y.txt  Qwen_python_ai_youtube_channel_ai_content_generator.py_20260215_owi8384b2.txt  Qwen_python_ai_youtube_channel_audio_generator.py_20260215_fa1ttogct.txt  Qwen_python_ai_youtube_channel_image_manager.py_20260215_z4pv03z4h.txt  Qwen_python_ai_youtube_channel_main_engine.py_20260215_or8ka4oz7.txt  Qwen_python_ai_youtube_channel_question_manager.py_20260215_zfm3ug3dp.txt  Qwen_python_ai_youtube_channel_video_generator.py_20260215_2qvzfgekv.txt  Qwen_python_ai_youtube_channel_youtube_uploader.py_20260215_6k206m5st.txt  Qwen_python_setup.py_20260215_0tdgns5ni.txt  Qwen_txt_requirements.txt_20260215_4pubhpy8w.txt  Qwen_yaml_.github_workflows_daily_run.yml_20260215_8s0sa5374.txt  README.md  SETUP.md  (+55 more)
Self-Governing-AI-YouTube-Channel-System/: README.md  main_controller.py  requirements.txt
analytics/: competitor_tracker.py  performance_analyzer.py
artifacts/: state.sqlite
audio/: audio_engine.py  sfx_manager.py  tts_engine.py  voice_humanizer.py
(+557 files in other folders)
