[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-autochannel"
version = "0.1.0"
description = "Data-driven YouTube channel automation (Shorts + Long)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
